ensure avatars are square in the sidebar list. added a bottom margin to get a gap between rows.

--- a/src/main/resources/scss/profile/components/_memberships.scss
+++ b/src/main/resources/scss/profile/components/_memberships.scss
@@ -38,7 +38,9 @@
 
 	img, svg {
 		width: $avatar-size;
+		height: $avatar-size;
 		float: left;
+		margin-bottom: .25rem;
 
 		& + * {
 			margin: 0.5rem 0 0 $avatar-size + .25rem;
